Chart for mobile version added

--- a/app/charts/main/charts.styl
+++ b/app/charts/main/charts.styl
@@ -1,2 +1,14 @@
 .tick.zero
   display none
+
+.col-md-11.mobile
+  display none
+
+.col-md-11.desktop
+  display block
+  
+@media screen and (max-width: screen-mobile-breakpoint)
+  .col-md-11.mobile
+    display block
+  .col-md-11.desktop
+    display none
