--- a/app/area/area.styl
+++ b/app/area/area.styl
@@ -10,7 +10,7 @@ page-layout-margins = 0 50px 0 50px
 .moveOutLeft
   transition:0.3s linear all;
   transform: translateX(0px);
-  
+
 .menuDefault
   transform: translateX(130px);
 
@@ -63,7 +63,7 @@ page-layout-margins = 0 50px 0 50px
   position relative
   &.active
   &:hover
-  &:focus  
+  &:focus
     background second-color
     color #FFF
   &.open-menu
@@ -82,10 +82,10 @@ page-layout-margins = 0 50px 0 50px
       position absolute
       right 5px
       top 14px
-    
+
 h4.election-help-text
   position absolute
-  right 280px 
+  right 280px
   color #FFF
   line-height 27px
   .glyphicon
@@ -125,7 +125,7 @@ h4.election-help-text
     height dropdown-height
     color #FFF
     text-align center
-    
+
     &.moveDown
       transition 0.3s linear all;
       transform translateY(178px);
@@ -133,7 +133,7 @@ h4.election-help-text
     &.moveOutDown
       transition 0.3s linear all;
       transform translateY(50);
-      
+
     .element
       cursor pointer
       font-size 15px
@@ -157,8 +157,8 @@ h4.election-help-text
   position relative
   top 75px
   margin page-layout-margins
-  
-    
+
+
 .menu
   height 100%
   width 200px
@@ -175,7 +175,7 @@ h4.election-help-text
   &.moveLeft
   &.menuDefault
     transform: translateX(200px);
-  
+
   input
     margin 10px 0 10px 10px
     width 180px
@@ -194,7 +194,7 @@ h4.election-help-text
   background-color rgba(255,255,255, 0.8)
   display block
   top 0
-  bottom 0 
+  bottom 0
   right 0
   left 0
 
@@ -202,49 +202,131 @@ h4.election-help-text
   .choose-election-data
     width 100%
 
-.pkw-chooser
+.pkw-image-header
+  position relative
+
+  h1
+    position: absolute;
+    bottom: 20%
+    left: 0;
+    right: 0;
+    text-align center;
+    color: #FFF;
+    font-size: 36px;
+    margin 0
+    text-shadow: 0 0px 9px rgb(0, 0, 0);
+
+    @media screen and (min-width: 400px)
+      text-shadow: 0px -4px 11px rgba(0,0,0, 0.8);
+      font-size: 41px;
+
+    @media screen and (min-width: 550px)
+      font-size: 62px;
+
+    @media screen and (min-width: 700px)
+      font-size: 82px;
+
+.pkw-header
+
+  position relative
+  padding 20px 0px
+
+  &-image {
+    width: 100%;
+  }
   
+  p
+    font-size 1.15em
+    @media screen and (min-width: 600px)
+      font-size 1.4em
+  
+  &-share
+    margin-top 20px
+      
+  &-share-item
+    display inline-block
+    height 1.5em
+    vertical-align middle
+    margin 0.5em
+
+.pkw-chooser
+
   position relative
   background #eee;
   border-radius 3px
-  padding 12px
+  padding 20px 10px
   margin-bottom 1em
+  font-size 16px
   
   &-item
     display block
     line-height 40px
-    
+
     @media screen and (min-width: 600px)
       display inline
-  
-  select 
-    padding 5px 2px
+
+  select
+    padding 8px 2px
     border-radius 3px
     max-width 15em
-    
-  &-button 
-    background #fde433
-    border 1px solid #EED62C
+
+  &-button
     color #222
     border-radius 3px
-    padding 8px 25px
+    padding 8px 16px
     text-transform uppercase
     font-size 0.8em
     font-weight bold
-    width 75%
+    width 45%
     vertical-align middle
     line-height 1.4
+    margin-left 0.5em
+    margin-right 0.5em
     
     @media screen and (min-width: 600px)
       width auto
-      margin-left 1em
+          
+  &-button-show
+    background #fde433
+    border 1px solid #EED62C
+    padding-left 25px
+    padding-right 25px
+    
+    @media screen and (min-width: 600px)
+      margin-left 2em
+          
+  &-button-reset
+    background #fff
+    border 1px solid #e3e3e3
 
-.pkw-stats-links
   
+.pkw-stats-links
+
   a
     cursor pointer
     margin 0 0.5em
 
+.pkw-owner
+  margin-bottom 2em
+  
+  &-logo 
+    display block
+    margin 0 auto
+    width 200px
+    max-width 100%
+    margin-top 1em
+    
+    img
+      width: 100%
+    
+.pkw-autor
+  margin-bottom 2em
+
+  &-photo
+    border-radius 50%
+    float left
+    margin-right 15px
+    width 80px
 
 
 @-moz-keyframes three-quarters-loader {
