Add opengraph data

--- a/app/area/area.ctrl.jade
+++ b/app/area/area.ctrl.jade
@@ -18,7 +18,7 @@
       div.pkw-header-share-item
         <div class="fb-share-button" data-href="http://pkw.miastojestnasze.org" data-layout="button_count"></div>
       div.pkw-header-share-item
-        <a href="https://twitter.com/share" data-url="http://pkw.miastojestnasze.org" class="twitter-share-button" data-text="" data-via="MiastoJestNasze">Tweet</a>
+        <a href="https://twitter.com/share" data-url="http://pkw.miastojestnasze.org" class="twitter-share-button" data-text="Mija rok od wyborów samorządowych, ale wyników w internecie nadal nie ma. Stowarzyszenie Miasto Jest Nasze postanowiło nie czekać w nieskończoność i opublikować je same." data-via="MiastoJestNasze">Tweet</a>
 
   section.pkw-chooser.text-center.form-inline(id="searchbox")
 
