Fix order in mobile charts

--- a/app/charts/main/charts.dir.jade
+++ b/app/charts/main/charts.dir.jade
@@ -1,4 +1,4 @@
-.col-md-11.desktop
+.pkw-chart-desktop
   nvd3(options="options" data="chartData"  config="{deepWatchData: true}")
-.col-md-11.mobile
+.pkw-chart-mobile
   nvd3(options="optionsMobileChart" data="chartMobileData" events="events" config="{deepWatchData: true, refreshDataOnly: false}")
