--- a/app/charts/main/charts.styl
+++ b/app/charts/main/charts.styl
@@ -1,14 +1,14 @@
 .tick.zero
   display none
 
-.col-md-11.mobile
+.pkw-chart-mobile
   display none
 
-.col-md-11.desktop
+.pkw-chart-desktop
   display block
   
 @media screen and (max-width: screen-mobile-breakpoint)
-  .col-md-11.mobile
+  .pkw-chart-mobile
     display block
-  .col-md-11.desktop
+  .pkw-chart-desktop
     display none
