Make searchbox dark blue

--- a/app/area/area.styl
+++ b/app/area/area.styl
@@ -257,6 +257,8 @@ h4.election-help-text
   padding 20px 10px
   margin-bottom 1em
   font-size 16px
+  background-color #00173A;
+  color #fff
   
   &-item
     display block
@@ -269,7 +271,8 @@ h4.election-help-text
     padding 8px 2px
     border-radius 3px
     max-width 15em
-
+    color #333
+    
   &-button
     color #222
     border-radius 3px
