Minor copy corrections

--- a/app/area/area.ctrl.jade
+++ b/app/area/area.ctrl.jade
@@ -93,7 +93,7 @@
   section.row
     div.text-center.col-md-8.col-md-offset-2
       h4 O projekcie
-      p #[strong Mija rok od wyborów samorządowych]. Niestety wyników w internecie nadal nie ma. Miasto Jest Nasze, wobec niedociągnięć państwowych instytucji, nie pozostaje bierne - stowarzyszenie postanowiło samo opublikować wyniki wyborów samorządowych w Warszawie. Na podstawie danych przesłanych przez Państwową Komisję Wyborczą w pliku Excel powstał serwis, który udostępnia wyniki głosowania w łatwy i przejrzysty sposób.
+      p #[strong Mija rok od wyborów samorządowych]. Niestety wyników w internecie nadal nie ma. Miasto Jest Nasze, wobec niedociągnięć państwowych instytucji, nie pozostaje bierne. Stowarzyszenie postanowiło samo opublikować wyniki wyborów samorządowych w Warszawie. Na podstawie danych wydobytych od Państwowej Komisji Wyborczej w pliku Excel powstał serwis, który udostępnia wyniki głosowania w łatwy i przejrzysty sposób.
 
   section.row.pkw-owner
     div.text-center.col-md-8.col-md-offset-2
@@ -105,4 +105,4 @@
     div.col-md-8.col-md-offset-2
       h4.text-center Autor projektu
       img.pkw-autor-photo(src="/img/autor.jpg")
-      p PKW nie dało rady więc w Miasto Jest Nasze poprosiliśmy #[a(href="https://www.linkedin.com/in/pawe%C5%82-ga%C5%82wa-75562188") Pawła Gawłę]: programistę od półtora roku, wcześniej dziennikarza. Kocha Warszawę, działalność społeczną i podobno ma 21 lat. Koszt strony: 5 zarwanych nocy, 3 litry kawy i 80 wypalonych papierosów
+      p PKW nie dało rady więc w Miasto Jest Nasze poprosiliśmy #[a(href="https://www.linkedin.com/in/pawe%C5%82-ga%C5%82wa-75562188") Pawła Gawłę]: programistę od półtora roku, wcześniej dziennikarza. Kocha Warszawę, działalność społeczną i podobno ma 21 lat. Koszt strony: 5 zarwanych nocy, 3 litry kawy i 9 pszenicznych Koźlaków
