--- a/app/area/area.styl
+++ b/app/area/area.styl
@@ -263,15 +263,17 @@ h4.election-help-text
   &-item
     display block
     line-height 40px
-
+    
     @media screen and (min-width: 600px)
-      display inline
+      display inline-block
 
   select
     padding 8px 2px
     border-radius 3px
-    max-width 15em
+    max-width 10em
     color #333
+    margin-left 0.25em
+    margin-right 1em
     
   &-button
     color #222
