Fix typo in autor's name

--- a/app/area/area.ctrl.jade
+++ b/app/area/area.ctrl.jade
@@ -105,4 +105,4 @@
     div.col-md-8.col-md-offset-2
       h4.text-center Autor projektu
       img.pkw-autor-photo(src="/img/autor.jpg")
-      p PKW nie dało rady więc w Miasto Jest Nasze poprosiliśmy #[a(href="https://www.linkedin.com/in/pawe%C5%82-ga%C5%82wa-75562188") Pawła Gawłę]: programistę od półtora roku, wcześniej dziennikarza. Kocha Warszawę, działalność społeczną i podobno ma 21 lat. Koszt strony: 5 zarwanych nocy, 3 litry kawy i 9 pszenicznych Koźlaków
+      p PKW nie dało rady więc w Miasto Jest Nasze poprosiliśmy #[a(href="https://www.linkedin.com/in/pawe%C5%82-ga%C5%82wa-75562188") Pawła Gałwę]: programistę od półtora roku, wcześniej dziennikarza. Kocha Warszawę, działalność społeczną i podobno ma 21 lat. Koszt strony: 5 zarwanych nocy, 3 litry kawy i 9 pszenicznych Koźlaków
